# RPI-GPU-rdpClient

./: .gitignore  LICENSE  README.md  WindowsCompileGuide.md
RPI-Client/: CMakeLists.txt  client.cpp  events.cpp  mouse.h  video.cpp
Server/: CMakeLists.txt  Capture.h  FFMPEG_encoding.hpp  FindDirectX.cmake  GDICapture.h  NV_encoding.hpp  OpenCVLib.h  WDDMCapture.h  bounded_buffer.h  color_conversion.cu  color_conversion.h  config.h  config.h.in  fps.h  monitor.h  params.h  server.cpp  transcoding.cpp  wddm.h
Server/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvHWEncoder.cpp  NvHWEncoder.h  nvCPUOPSys.h  nvEncodeAPI.h  nvFileIO.h  nvUtils.h
win8-wddm/: win8-wddm.sln
win8-wddm/win8-wddm/: main.cpp  wddm.h  win8-wddm.vcxproj.filters
